# model

./: .gitignore  README.md  cleaning.py  main.py  monitor.py  pyproject.toml  requirements.txt  scrape.py  train.py
dataset_clean/: 1763087087.csv_clean.csv
inference/: inference_arima.py  inference_rf.py
train/: arima.py  rf.py
