[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bentoml>=1.1",
    "dvc>=3.64.2",
    "evidently>=0.4",
    "fastapi>=0.104",
    "joblib>=1.3",
    "mlflow>=2.9",
    "numpy>=1.23",
    "optuna>=3.4",
    "pandas>=1.5",
    "pydantic>=2.5",
    "python-dateutil>=2.8.2",
    "requests>=2.31",
    "scikit-learn>=1.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.23",
]
